# ai-brain-claims

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  STATUS.md
.github/ISSUE_TEMPLATE/: config.yml  contest-a-verdict.yml  observatory-bug.yml  scorer-or-benchmark.yml
.github/workflows/: ci.yml  release.yml
data/: README.md  index.md
data/manifests/: pipeline.json
data/prompts/: angle-research.md  citation-verification.md  claim-port.md  claim-research-template.md  design-pass.md  idea-research-prompts.md  persona-lens-primers.md  roundtable-R1.md  roundtable-R2.md  super-prompt-redesign.md
data/transcripts/: angle-A-library.md  angle-B-protocol.md  angle-C-service.md  angle-synthesis.md  idea-doc.md  roundtable.md
data/verifications/: citation-pass-1.json
eval/benchmarks/: needle_retention.py
eval/results/: needle-retention.json
observatory/: README.md  pyproject.toml
observatory/src/observatory/: __init__.py  cli.py  confidence.py  eval.py  importance.py  log.py  views.py
observatory/tests/: test_log.py  test_views.py
scripts/: sync-from-brain.sh
site/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
site/public/: robots.txt  sitemap.xml
site/src/components/: ClaimCard.astro  ClaimsExplorer.tsx  CompareFigure.tsx  DensityPlot.tsx  DesignNotesDemo.tsx  EvidenceScale.tsx  Footer.astro  Hero.tsx  MultiSeedFigure.tsx  Nav.astro  ObservatoryDesign.tsx  RoundtableTree.tsx  Sidenote.astro  Sigil.tsx  SigilAstro.astro  VerdictPill.astro
site/src/content/: config.ts
site/src/data/: baseline-vs-hygiene.json  needle-retention.json
site/src/layouts/: BaseLayout.astro
site/src/lib/: personas.ts  reading-list.ts  site.ts  verdicts.ts
site/src/pages/: agents.astro  design-notes.astro  index.astro  methodology.astro  observatory.astro  paper.astro  reading-list.astro  (+4 more)
(+24 files in other folders)
