[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claim-observatory"
version = "0.1.0"
description = "Active Context Hygiene for agent systems — an immutable event log with importance and confidence as pure functions over the log. Imports as `observatory`."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Abdullahi Abdi" },
]
keywords = [
    "ai",
    "agents",
    "llm",
    "context-management",
    "memory",
    "rag",
    "evaluation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]
eval = [
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/abdul-abdi/ai-brain-claims"
Repository = "https://github.com/abdul-abdi/ai-brain-claims"
Issues = "https://github.com/abdul-abdi/ai-brain-claims/issues"

[project.scripts]
observatory = "observatory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/observatory"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.10"
strict = true
